style.css
/* ... */
#img2img-columns>div,
#control-columns>div,
#video-columns>div,
#extras-columns>div {
  flex-grow: 1;
  justify-content: flex-start;
  min-width: var(--sd-panel-min-width);
  width: 100%;
}

#control-columns .panel.no-tr,
#video-columns .panel.no-tr {
  overflow: auto;
}

#control_gallery .grid-container {
  height: 99%;
}

#control-columns img,
#control-columns svg {
  max-width: 100%;
  object-position: top;
  width: 100%;
  height: 99%;
  object-fit: var(--sd-image-fit);
}

#control-columns.flex-force-column,
#video-columns.flex-force-column {
  flex-direction: column;
}

div#control_params_control_tabitem .control-settings .gradio-accordion .form,
div#video_params_control_tabitem .video-settings .gradio-accordion .form {
  flex-direction: row;
  flex-wrap: wrap;
}

[id$="results"] .panel.no-br:first-child {
  min-height: calc(var(--sd-input-height) + 2* var(--sd-panel-padding));
}

[id$="results"] .panel.no-tr:last-child .panel.no-tr {
  position: relative;
}

[id$="results"] .panel.no-tr:last-child .panel.no-tr::before {
  background-color: var(--sd-panel-background-color);
  border-radius: 0 0 var(--sd-border-radius) var(--sd-border-radius);
  content: "";
  height: 100%;
  left: 0;
  outline: var(--sd-border-size) solid var(--sd-panel-border-color);
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.option-show-outline-params .outline-params .no-border:hover,
.option-show-outline-params .outline-params .portal:has(> [class*="gradio-"]):hover {
  outline: var(--sd-outline-size) solid var(--sd-outline-color);
}

.option-show-outline-params .outline-params .no-border>.portal:has(> [class*="gradio-"]):hover,
.option-show-outline-params .outline-params .portal:has(> .gradio-button):hover,

.no-outline {
  outline: var(--sd-border-size) none var(--sd-panel-border-color) !important;
}

#control_script_container>div {
  outline: none !important;
}

#control_script_alwayson {
  outline: none !important;
}

#control_script_alwayson>.label-wrap {
  display: none;
}

#control_script_list>label>span {
  display: none;
}

#control_script_ip_adapters {
  display: none;
}

.tabitem>.gap:has(ul.options),
.xtabs-item:has(ul.options) {
  overflow: visible;
}

.gap:has(.interrogate-clip) {
  position: relative;
}

.ar-dropdown {
  outline: none !important;
}

.ar-dropdown .container, .ar-dropdown ul {
  max-width: 6em;
}

.subseed-strength {
  outline: none !important;
}

button.interrogate,
button.interrogate-clip,
button.interrogate-blip,
button.image-fit {
  opacity: 0.5;
  position: absolute;
  top: 0;
  background: var(--sd-panel-background-color);
  z-index: 1;
}

button.interrogate {
  right: 5.8em;
}

button.image-fit {
  right: 8.6em;
}

button.interrogate-clip {
  left: 1em;
}

button.interrogate-blip {
  left: 3em;
}

button.interrogate-clip::after,
button.interrogate-blip::after {
  -webkit-mask-position: center center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: contain;
  background-color: var(--sd-input-text-color);
  border: 0;
  content: '';
  height: 80%;
  left: 10%;
  margin: 0;
  mask-image: url(./html/svg/question-answer-line.svg);
  mask-position: center center;
  mask-repeat: no-repeat;
  mask-size: contain;
  padding: 0;
  position: absolute;
  top: 10%;
  width: 80%;
}

button.interrogate-clip:hover::after,
button.interrogate-blip:hover::after {
  background-color: var(--sd-input-hover-text-color);
  mask-image: url(./html/svg/question-answer-fill.svg);
}

.outline-params h2 {
  display: block;
}

.outline-params .spacer-group {
  display: none;
}

.option-hide-headers-params .outline-params h2 {
  display: none;
}

.option-hide-headers-params .outline-params .spacer-group {
  display: block;
}

#layout-extras .outline-params h2 {
  display: block;
}

#layout-extras .outline-params .spacer-group {
  display: none;
}

#tab-gallery-folders,
#tab-gallery-files {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#tab-gallery-folders {
  justify-content: start;
  gap: var(--sd-gap-size);
}

#tab-gallery-files {
  background-color: var(--sd-input-background-color);
  justify-content: space-evenly;
}

#tab-gallery-sort-buttons>.form {
  display: flex;
  gap: 0;
}

#tab-gallery-search textarea {
  resize: none;
}

#tab-gallery-status {
  color: var(--sd-button-selected-text-color);
}

gallery-folder {
  padding: 0;
}

.gallery-sort,
gallery-folder {
  font-family: 'NotoSans';
}

gallery-folder:hover {
  color: var(--sd-input-hover-text-color);
}

#split-settings-left {
  min-width: 10em
}

.break {
  flex-basis: 100%;
  height: 0;
}

.splash {
  display: block;
  height: 100vh;
  left: 0;
  position: fixed;
  text-align: center;
  top: 0;
  width: 100vw;
  z-index: 1000;
}

.motd {
  color: white;
  font-family: monospace;
  font-variant: all-petite-caps;
  margin-top: 2em;
  font-size: 1.2em;
}

.splash-img {
  margin: 10% auto 0 auto;
  width: 512px;
  height: 512px;
  background-repeat: no-repeat;
  animation: hue 5s infinite alternate;
  max-width: 80vw;
  background-size: contain;
}

.loading {
  color: white;
  left: 50%;
  position: absolute;
  top: 20%;
  transform: translateX(-50%);
}

.loader {
  animation: spin 4s linear infinite;
  border: var(--spacing-md) solid transparent;
  border-radius: 50%;
  border-top: var(--spacing-md) solid var(--sd-main-accent-color);
  height: 300px;
  position: relative;
  width: 300px;
}

.loader::before, .loader::after {
  border: var(--spacing-md) solid transparent;
  border-radius: 50%;
  bottom: 6px;
  content: "";
  left: 6px;
  position: absolute;
  right: 6px;
  top: 6px;
}

.loader::before {
  animation: 3s spin linear infinite;
  border-top-color: var(--sd-main-accent-color);
  filter: brightness(50%);
}

.loader::after {
  animation: spin 1.5s linear infinite;
  border-top-color: var(--sd-main-accent-color);
  filter: brightness(150%);
}

@keyframes move {
  from { background-position-x: 0, -40px; }
  to { background-position-x: 0, 40px; }
}
/* ... */

